[package]
name = "io"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", features = ["all"]}
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.18"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
libc = "0.2.155"
sendfile = "0.3.0"